--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "nextjs-template",
-  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "test": "yarn run lint && yarn run format",
+    "lint": "next lint",
+    "format": "prettier --write 'src/**/*{.ts,.tsx}'"
   },
   "dependencies": {
     "next": "12.2.5",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
+    "@types/prettier": "^2",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
@@ -22,6 +24,7 @@
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.2"
   },
