--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         if: ${{ github.ref_name == 'stable' }}
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages -d build -b "gh-pages" -m "build: Hosting build for branch ${GITHUB_REF##*/} - ${GITHUB_SHA::7}" -u "github-actions-bot <support+actions@github.com>"
+          npx gh-pages -d out -b "gh-pages" -m "build: Hosting build for branch ${GITHUB_REF##*/} - ${GITHUB_SHA::7}" -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
